GNOME Bugzilla – Bug 546353
Statusbar in Trash does not show item counts for subfolders.
Last modified: 2008-09-12 11:03:45 UTC
There's no "item blah (contains N items)". You can't know if the folder is full or not, which is one useful feature for trash I guess. And anyway it should be consistent with the rest of nautilus. Major because consistency "must be a must" in our happy gnome land :).
Confirming.
Created attachment 118491 [details] [review] Fix on nautilus_directory_is_local. Hi! This is my first comment and I hope do more :) This bug come from nautilus_directory_is_local(...) Only locals files are show. To find out if the directory is on local filesystem it calls to g_file_is_native. I'm not sure that this function should have been called here, the official documentation says something like "This does not mean the file is local..." (http://library.gnome.org/devel/gio/unstable/GFile.html#g-file-is-native) The problem is that gio doesn't seem to manage GFiles with the URI "trash:///...". If you try to get de path for a GFile with these URI's, gio returns NULL. Here is a possible solution.
Created attachment 118492 [details] [review] Fix on nautilus_directory_is_local Ops... :P
The approach looks fine to me. Christian?
Thanks for your work Alvaro. I committed an equivalent patch: http://svn.gnome.org/viewvc/nautilus?view=revision&revision=14615