src/nautilus-directory.c
@@ -771,8 +771,7 @@ nautilus_directory_is_local (NautilusDirectory *directory)
         return TRUE;
     }
 
-    return nautilus_directory_is_in_trash (directory) ||
-           nautilus_directory_is_in_recent (directory) ||
+    return nautilus_directory_is_in_recent (directory) ||
            g_file_is_native (directory->details->location);
 }
 
